# MCCE_Scikit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  msa_minimal_envir.yaml  pyproject.toml
_tmp/: mcce_io.defs
mcceSK/: base.py  mcce_io.py  ms_sampling.defs  ms_sampling.py
notebooks/: ms_sampling.ipynb  ms_sampling.md
src/: VERSION  _version.py  base.py  cli.py  constants.py  jj_ms_analysis.py  mcce_io.py  mcce_io_prev.py  ms_sampling.py
src/mcceSK/: base.py  constants.py
tests/data/: head3.lst  run.prm.record
tests/data/ms_out/pH5eH0ms/: header
