# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcceSK"
description = "Scientific Toolkit to support analyses of the simulation program MCCE (https://github.com/GunnerLab) output files in python."
readme = "README.md"
authors = [
    {name = "Cat Chenal @ GunnerLab"},
    {name = "Junjun Mao @ GunnerLab"}
]
maintainers = [
    {name = "Cat Chenal @ GunnerLab"},
    {name = "Junjun Mao @ GunnerLab"}
]
license = {file = "LICENSE"}
keywords = [
    "biophysics",
    "proteomics",
    "cheminformatics",
    "drug design",
    "Monte Carlo simulation",
    "microstate analysis"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Biophysicists, Developpers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [  # TODO: Add full list of dependencies
    "numpy",
]
[project.urls]
Source = "https://github.com/GunnerLab/MCCE_Scikit"
#Homepage =
#Documentation =
ChangeLog = "https://github.com/GunnerLab/MCCE_Scikit/blob/mainCHANGELOG.md"

[project.scripts]
#cli-name = "mypkg.mymodule:some_func"

[project.optional-dependencies]
test = [
    "pytest",
]
[tool.setuptools]
# This subkey is a beta stage development and keys may change in the future,
#  see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
package-dir = {"" = "mcceSK"}

[tool.setuptools.packages.find]
where = ["mcceSK"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "mcceSK.VERSION"}
